Remove avatar loading state to avoid flicker
Original reason why it's there (by hfcRed): If you render someones icon, it exports it as an image and puts in the cache, so when you navigate and that same person appears again on the next page, it pulls the rendered image from the cache and uses that instead of a canvas

But could not reproduce any kind of "pop in".

--- a/app/components/Avatar.module.css
+++ b/app/components/Avatar.module.css
@@ -1,12 +1,3 @@
-.identicon {
-	filter: blur(99px);
-	transition: filter 0.3s;
-}
-
-.loaded {
-	filter: blur(0);
-}
-
 .avatarWrapper {
 	flex-shrink: 0;
 	width: fit-content;
